# OTUS-HW-0

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
.github/workflows/: cmake-single-platform.yml
cicd/: github.yaml
src/: main.cpp
src/scripts/: deploy.sh
src/scripts/deploy/: deploy.sh
src/scripts/formatter/: format.sh
src/templates/singleton/: Singleton.h
src/versioning/: ProjectVersion.h  ProjectVersion.h.in  Version.h
templates/singleton/: Singleton.h
tests/boost/: CMakeLists.txt
tests/boost/version/: test_version.cpp
versioning/: ProjectVersion.h
